Header & Navigation Menu

--- a/index.html
+++ b/index.html
@@ -8,8 +8,47 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
     <!-- main css -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <!-- default color skin -->
+    <link rel="stylesheet" type="text/css" href="css/skins/color-1.css" />
   </head>
   <body>
+    <!-- header start -->
+    <header class="header">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="logo">
+            <a href="index.html">PL</a>
+          </div>
+          <div class="hamburger-btn outer-shadow hover-in-shadow">
+            <span></span>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- header end -->
+
+    <!-- navigation menu start -->
+    <nav class="nav-menu">
+      <div class="close-nav-menu outer-shadow hover-in-shadow">&times;</div>
+      <div class="nav-menu-inner">
+        <ul>
+          <li><a href="#" class="inner-shadow active">home</a></li>
+          <li><a href="#" class="outer-shadow hover-in-shadow">about</a></li>
+          <li><a href="#" class="outer-shadow hover-in-shadow">services</a></li>
+          <li>
+            <a href="#" class="outer-shadow hover-in-shadow">portafolio</a>
+          </li>
+          <li>
+            <a href="#" class="outer-shadow hover-in-shadow">testimonial</a>
+          </li>
+          <li><a href="#" class="outer-shadow hover-in-shadow">contact</a></li>
+        </ul>
+      </div>
+      <!-- copyright text -->
+      <p class="copyright-text">&copy; 2020 The WebShala</p>
+    </nav>
+    <!-- navigation menu end -->
+
     <!-- main js -->
     <script src="js/main.js"></script>
     <!-- style switcher js -->
